--- a/devicedriver/Makefile
+++ b/devicedriver/Makefile
@@ -1,9 +1,9 @@
-obj-m = testDev.o
+obj-m = testDevice.o
 MODULE_FORCE_UNLOAD=y
 all:
-	make -C /lib/modules/$(shell uname -r)/build M=$(pwd) modules
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
 clean :
-	make -C /lib/modules/$(shell uname -r)/build M=$(pwd) clean
+	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) clean
 
-test:test.c
-	cc -o test test.c
+test:testDevice.c
+	cc -o test testDevice.c
